--- a/estilos.css
+++ b/estilos.css
@@ -21,7 +21,7 @@ body{
 }
 
 #video{
-    background-position: center center;
+    background-position: center;
     background-size: cover;
     display: flex;
     margin-top: 0.5rem;
